--- a/index.html
+++ b/index.html
@@ -29,6 +29,13 @@
             <li class="navbar__menu__item">Contact</li>
         </ul>
     </nav>
+    <!-- Home -->
+    <section class="home">
+        <img src="imgs/profile.jpg" alt="Yoonji's profile photo" class="home__avatar">
+        <h1 class="home__title">신윤지 <br>프론트엔드 개발자</h1>
+        <h2 class="home__description">배우는 게 즐거운 개발자</h2>
+        <button class="home__contact">Contact Me</button>
+    </section>
     <!-- About -->
     <section id="about"></section>
     <!-- Skills -->
