--- a/index.html
+++ b/index.html
@@ -37,7 +37,45 @@
         <button class="home__contact">Contact Me</button>
     </section>
     <!-- About -->
-    <section id="about"></section>
+    <section id="about">
+        <h1>About me</h1>
+        <p>다른 차원을 창작하고 싶은 개발자</p>
+        <div class="about__majors">
+            <div class="major">
+                <div class="major__icon">
+                    <i class="fab fa-html5"></i>
+                </div>
+                <div class="major__title">HTML 5</div>
+                <div class="major__description">빠른 마크업, 시맨틱 태그</div>
+            </div>
+            <div class="major">
+                <div class="major__icon">
+                    <i class="fab fa-css3"></i>
+                </div>
+                <div class="major__title">CSS 3</div>
+                <div class="major__description">flex-box, grid, sass</div>
+            </div>
+            <div class="major">
+                <div class="major__icon">
+                    <i class="fab fa-js-square"></i>
+                </div>
+                <div class="major__title">JS</div>
+                <div class="major__description">DOM 조작, Web APIs</div>
+            </div>
+        </div>
+        <div class="about__schools">
+            <div class="school">
+                <img src="imgs/schools/wecode.png" alt="wecode" class="school__logo">
+                <p class="school__name">Main course - Frontend</p>
+                <p class="shool__period">2022 Apr 25 ~ Jul 15</p>
+            </div>
+            <div class="school">
+                <img src="imgs/schools/wecode.png" alt="wecode" class="school__logo">
+                <p class="school__name">Main course - Frontend</p>
+                <p class="shool__period">2022 Apr 25 ~ Jul 15</p>
+            </div>
+        </div>
+    </section>
     <!-- Skills -->
     <section id="skills"></section>
     <!-- Work -->
