--- a/index.html
+++ b/index.html
@@ -154,7 +154,39 @@
         </div>
     </section>
     <!-- Work -->
-    <section id="work"></section>
+    <section id="work">
+        <h1>My work</h1>
+        <h3>Projects</h3>
+        <div class="work__categories">
+            <button class="category__btn">All<span class="category__count">8</span></button>
+            <button class="category__btn">Front-end<span class = "category__count">4</span></button>
+            <button class="category__btn">Back-end<span class = "category__count">3</span></button>
+            <button class="category__btn">Mobile<span class = "category__count">2</span></button>
+        </div>
+        <div class="work__projects">
+            <a href="#" class="project" target="blank">
+                <img class="project__img" src="imgs/projects/1.jpeg" alt="River">
+                <div class="project__description">
+                    <h3>River Phoenix</h3>
+                    <span>Clone coding with HTML and CSS</span>
+                </div>
+            </a>
+            <a href="#" class="project" target="blank">
+                <img class="project__img" src="imgs/projects/2.jpg" alt="Pete">
+                <div class="project__description">
+                    <h3>Pete Burns</h3>
+                    <span>Clone coding with HTML and CSS</span>
+                </div>
+            </a>
+            <a href="#" class="project" target="blank">
+                <img class="project__img" src="imgs/projects/3.jpeg" alt="River">
+                <div class="project__description">
+                    <h3>River Phoenix</h3>
+                    <span>Clone coding with HTML and CSS</span>
+                </div>
+            </a>
+        </div>
+    </section>
     <!-- Testimonials -->
     <section id="testimonials"></section>
     <!-- Contact -->
