--- a/index.html
+++ b/index.html
@@ -188,7 +188,30 @@
         </div>
     </section>
     <!-- Testimonials -->
-    <section id="testimonials"></section>
+    <section id="testimonials">
+        <h1>Testimonials</h1>
+        <h3>See what they say about me</h3>
+        <div class="testimonials">
+            <div class="testimonial">
+                <img src="imgs/tesimonial/people1-200515-154332.jpg" alt="People" class="testimonial__avatar">
+                <div class="testimonial__speechBubble">
+                    <p>
+                        Lorem, ipsum dolor sit amet consectetur adipisicing elit. Qui maiores rem voluptatum, id porro nisi asperiores, quia cumque explicabo animi dolorem, aspernatur minima magni nam! Dolor distinctio earum enim repellendus!
+                    </p>
+                    <p class="name"><a href="#">Ellie</a> / Samsung</p>
+                </div>
+            </div>
+            <div class="testimonial">
+                <img src="imgs/tesimonial/people1-200515-154332.jpg" alt="People" class="testimonial__avatar">
+                <div class="testimonial__speechBubble">
+                    <p>
+                        Lorem, ipsum dolor sit amet consectetur adipisicing elit. Qui maiores rem voluptatum, id porro nisi asperiores, quia cumque explicabo animi dolorem, aspernatur minima magni nam! Dolor distinctio earum enim repellendus!
+                    </p>
+                    <p class="name"><a href="#">Ellie</a> / Samsung</p>
+                </div>
+            </div>
+        </div>
+    </section>
     <!-- Contact -->
     <section id="contact"></section>
 </body>
