--- a/index.html
+++ b/index.html
@@ -213,6 +213,18 @@
         </div>
     </section>
     <!-- Contact -->
-    <section id="contact"></section>
+    <section id="contact">
+        <h1 class="contact__title">Let's talk</h1>
+        <h2 class="contact__email">syju3367@gmail.com</h2>
+        <div class="contact__links">
+            <a href="https://github.com/sourmix?tab=repositories" target="blank">
+                <i class="fab fa-github"></i>
+            </a>
+            <a href="https://www.naver.com/" target="blank">
+                <i class="far fa-envelope"></i>
+            </a>
+        </div>
+        <p class="contact__rights">2022 Dream Coding Ellie - All rights reserved</p>
+    </section>
 </body>
 </html>
