--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
         <button class="home__contact">Contact Me</button>
     </section>
     <!-- About -->
-    <section id="about">
+    <section id="about" class="section">
         <h1>About me</h1>
         <p>다른 차원을 창작하고 싶은 개발자</p>
         <div class="about__majors">
@@ -45,39 +45,43 @@
                 <div class="major__icon">
                     <i class="fab fa-html5"></i>
                 </div>
-                <div class="major__title">HTML 5</div>
-                <div class="major__description">빠른 마크업, 시맨틱 태그</div>
+                <h2 class="major__title">HTML 5</h2>
+                <p class="major__description">빠른 마크업, 시맨틱 태그</p>
             </div>
             <div class="major">
                 <div class="major__icon">
                     <i class="fab fa-css3"></i>
                 </div>
-                <div class="major__title">CSS 3</div>
-                <div class="major__description">flex-box, grid, sass</div>
+                <h2 class="major__title">CSS 3</h2>
+                <p class="major__description">flex-box, grid, sass</p>
             </div>
             <div class="major">
                 <div class="major__icon">
                     <i class="fab fa-js-square"></i>
                 </div>
-                <div class="major__title">JS</div>
-                <div class="major__description">DOM 조작, Web APIs</div>
+                <h2 class="major__title">JS</h2>
+                <p class="major__description">DOM 조작, Web APIs</p>
             </div>
         </div>
         <div class="about__schools">
             <div class="school">
                 <img src="imgs/schools/wecode.png" alt="wecode" class="school__logo">
-                <p class="school__name">Main course - Frontend</p>
-                <p class="shool__period">2022 Apr 25 ~ Jul 15</p>
+                <div class="school__description">
+                    <p class="school__name">Main course - Frontend</p>
+                    <p class="school__period">2022 Apr 25 ~ Jul 15</p>
+                </div>
             </div>
             <div class="school">
                 <img src="imgs/schools/wecode.png" alt="wecode" class="school__logo">
-                <p class="school__name">Main course - Frontend</p>
-                <p class="shool__period">2022 Apr 25 ~ Jul 15</p>
+                <div class="school__description">
+                    <p class="school__name">Main course - Frontend</p>
+                    <p class="school__period">2022 Apr 25 ~ Jul 15</p>
+                </div>
             </div>
         </div>
     </section>
     <!-- Skills -->
-    <section id="skills">
+    <section id="skills" class="section">
         <h1>Skills</h1>
         <h2>Skills & Attributes</h2>
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Est sequi omnis, laudantium dolorem enim nesciunt explicabo expedita rem cum nam iure ad, suscipit reprehenderit consectetur molestias veritatis officiis ex? Aspernatur!</p>
@@ -154,7 +158,7 @@
         </div>
     </section>
     <!-- Work -->
-    <section id="work">
+    <section id="work" class="section">
         <h1>My work</h1>
         <h3>Projects</h3>
         <div class="work__categories">
@@ -188,7 +192,7 @@
         </div>
     </section>
     <!-- Testimonials -->
-    <section id="testimonials">
+    <section id="testimonials" class="section">
         <h1>Testimonials</h1>
         <h3>See what they say about me</h3>
         <div class="testimonials">
@@ -213,7 +217,7 @@
         </div>
     </section>
     <!-- Contact -->
-    <section id="contact">
+    <section id="contact" class="section">
         <h1 class="contact__title">Let's talk</h1>
         <h2 class="contact__email">syju3367@gmail.com</h2>
         <div class="contact__links">
