--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
         <button class="home__contact">Contact Me</button>
     </section>
     <!-- About -->
-    <section id="about" class="section">
+    <section id="about" class="section section__container">
         <h1>About me</h1>
         <p>다른 차원을 창작하고 싶은 개발자</p>
         <div class="about__majors">
@@ -82,7 +82,8 @@
     </section>
     <!-- Skills -->
     <section id="skills" class="section">
-        <h1>Skills</h1>
+        <div class="section__container">
+            <h1>Skills</h1>
         <h2>Skills & Attributes</h2>
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Est sequi omnis, laudantium dolorem enim nesciunt explicabo expedita rem cum nam iure ad, suscipit reprehenderit consectetur molestias veritatis officiis ex? Aspernatur!</p>
         <div class="skillset">
@@ -94,7 +95,7 @@
                         <span>99%</span>
                     </div>
                     <div class="skill__bar">
-                        <div class="skill__value"></div>
+                        <div class="skill__value" style="width: 99%;"></div>
                     </div>
                 </div>
                 <div class="skill">
@@ -103,7 +104,7 @@
                         <span>90%</span>
                     </div>
                     <div class="skill__bar">
-                        <div class="skill__value"></div>
+                        <div class="skill__value" style="width: 90%;"></div>
                     </div>
                 </div>
                 <div class="skill">
@@ -112,7 +113,7 @@
                         <span>90%</span>
                     </div>
                     <div class="skill__bar">
-                        <div class="skill__value"></div>
+                        <div class="skill__value" style="width: 90%;"></div>
                     </div>
                 </div>
                 <div class="skill">
@@ -121,7 +122,7 @@
                         <span>80%</span>
                     </div>
                     <div class="skill__bar">
-                        <div class="skill__value"></div>
+                        <div class="skill__value" style="width: 80%;"></div>
                     </div>
                 </div>
                 <div class="skill">
@@ -130,7 +131,7 @@
                         <span>88%</span>
                     </div>
                     <div class="skill__bar">
-                        <div class="skill__value"></div>
+                        <div class="skill__value" style="width: 88%;"></div>
                     </div>
                 </div>
                 
@@ -155,6 +156,7 @@
                     </ul>
                 </div>
             </div>
+        </div>
         </div>
     </section>
     <!-- Work -->
