CSS: Fix secton container

--- a/index.html
+++ b/index.html
@@ -161,7 +161,8 @@
     </section>
     <!-- Work -->
     <section id="work" class="section">
-        <h1>My work</h1>
+        <div class="section__container">
+            <h1>My work</h1>
         <h3>Projects</h3>
         <div class="work__categories">
             <button class="category__btn">All<span class="category__count">8</span></button>
@@ -192,10 +193,12 @@
                 </div>
             </a>
         </div>
+        </div>
     </section>
     <!-- Testimonials -->
     <section id="testimonials" class="section">
-        <h1>Testimonials</h1>
+        <div class="section__container">
+            <h1>Testimonials</h1>
         <h3>See what they say about me</h3>
         <div class="testimonials">
             <div class="testimonial">
@@ -216,6 +219,7 @@
                 </div>
                 <img src="imgs/tesimonial/people1-200515-154332.jpg" alt="People" class="testimonial__avatar">
             </div>
+        </div>
         </div>
     </section>
     <!-- Contact -->
