--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
             <a href="#">Yoonji</a>
         </div>
         <ul class="navbar__menu">
-            <li class="navbar__menu__item">Home</li>
+            <li class="navbar__menu__item active">Home</li>
             <li class="navbar__menu__item">About</li>
             <li class="navbar__menu__item">Skills</li>
             <li class="navbar__menu__item">My work</li>
@@ -31,9 +31,7 @@
 
     <!-- Home -->
     <main id="home">
-        <div class="home__avatar">
-            <img src="imgs/profile.jpg" alt="">
-        </div>
+            <img src="imgs/profile.jpg" class="home__avatar" alt="">
             <h1 class="home__title">Hello, <br>I'm Dream Coder</h1>
             <h2 class="home__description">A web developer in Seoul, Korea</h2>
         <button class="home__contact">CONTACT ME</button>
