--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
     </main>
 
     <!-- About -->
-    <section id="about">
+    <section id="about" class="section section__container">
             <h1 class="title">About me</h1>
             <p class="description">Lorem ipsum dolor sit amet consectetur adipisicing elit. Commodi inventore dolor fugit sunt aut soluta, dolorum totam dignissimos magni atque ex, voluptatem debitis. Nemo corrupti delectus voluptatem fugiat at soluta!</p>
         <div class="about__stacks">
@@ -46,106 +46,112 @@
                 <div class="stack__icon">
                     <i class="fab fa-html5"></i>
                 </div>
-                <div class="stack__title">HTML5</div>
+                <h2 class="stack__title">HTML5</h2>
                 <div class="stack__description">sementic tag</div>
             </div>
             <div class="stack">
                 <div class="stack__icon">
-                    <i class="fab fa-css3"></i>
+                    <i class="fab fa-css3-alt"></i>
                 </div>
-                <div class="stack__title">CSS3</div>
+                <h2 class="stack__title">CSS3</h2>
                 <div class="stack__description">flex-box, grid, media query</div>
             </div>
             <div class="stack">
                 <div class="stack__icon">
                     <i class="fab fa-js"></i>
                 </div>
-                <div class="stack__title">Javascript</div>
+                <h2 class="stack__title">Javascript</h2>
                 <div class="stack__description">DOM</div>
             </div>
         </div>
         <div class="about__schools">
             <div class="school">
                 <img src="imgs/schools/wecode.png" alt="wecode">
-                <p class="school__name">Wecode</p>
-                <p class="school__period">2022 Mar 16 - Until now</p>
+                <div class="school__description">
+                    <p class="school__name">Wecode</p>
+                    <p class="school__period">2022 Mar 16 - Until now</p>
+                </div>
             </div>
             <div class="school">
                 <img src="imgs/schools/wecode.png" alt="">
-                <p class="school__name">Wecode</p>
-                <p class="school__period">2022 Mar 16 - Until now</p>
+                <div class="school__description">
+                    <p class="school__name">Wecode</p>
+                    <p class="school__period">2022 Mar 16 - Until now</p>
+                </div>
             </div>
         </div>
     </section>
 
     <!-- Skills -->
-    <section id="skills">
-        <h1 class="title">Skills</h1>
-        <h3 class="subtitle">Skills & Attributes</h3>
-        <p class="description">Lorem ipsum dolor sit amet consectetur adipisicing elit. Beatae suscipit assumenda quaerat, porro odio est architecto quo perspiciatis. Beatae alias nobis numquam culpa mollitia iusto sit facilis pariatur eligendi illum!</p>
-        <div class="skillset">
-            <div class="skillset__left">
-                <h3 class="skillset__title">Skills</h3>
-                <div class="skill">
-                    <div class="skill__description">
-                        <span>HTML</span>
-                        <span>90%</span>
+    <section id="skills" class="section">
+        <div class="section__container">
+            <h1 class="title">Skills</h1>
+            <h2 class="subtitle">Skills & Attributes</h2>
+            <p class="description">Lorem ipsum dolor sit amet consectetur adipisicing elit. Beatae suscipit assumenda quaerat, porro odio est architecto quo perspiciatis. Beatae alias nobis numquam culpa mollitia iusto sit facilis pariatur eligendi illum!</p>
+            <div class="skillset">
+                <div class="skillset__left">
+                    <h3 class="skillset__title">Skills</h3>
+                    <div class="skill">
+                        <div class="skill__description">
+                            <span>HTML</span>
+                            <span>90%</span>
+                        </div>
+                        <div class="skill__guage">
+                            <div class="skill__value" style="width: 90%;"></div>
+                        </div>
                     </div>
-                    <div class="skill__guage">
-                        <div class="skill__value"></div>
+                    <div class="skill">
+                        <div class="skill__description">
+                            <span>CSS</span>
+                            <span>70%</span>
+                        </div>
+                        <div class="skill__guage">
+                            <div class="skill__value" style="width: 70%;"></div>
+                        </div>
+                    </div>
+                    <div class="skill">
+                        <div class="skill__description">
+                            <span>JAVASCRIPT</span>
+                            <span>30%</span>
+                        </div>
+                        <div class="skill__guage">
+                            <div class="skill__value" style="width: 30%;"></div>
+                        </div>
+                    </div>
+                    <div class="skill">
+                        <div class="skill__description">
+                            <span>REACT</span>
+                            <span>0%</span>
+                        </div>
+                        <div class="skill__guage">
+                            <div class="skill__value" style="width: 0%;"></div>
+                        </div>
+                    </div>
+                    <div class="skill">
+                        <div class="skill__description">
+                            <span>NODEJS</span>
+                            <span>5%</span>
+                        </div>
+                        <div class="skill__guage">
+                            <div class="skill__value" style="width: 5%;"></div>
+                        </div>
                     </div>
                 </div>
-                <div class="skill">
-                    <div class="skill__description">
-                        <span>CSS</span>
-                        <span>70%</span>
+                <div class="skillset__right">
+                    <div class="tools">
+                        <h3 class="skillset__title">Tools</h3>
+                        <ul class="tools__list">
+                            <li><span>Visual Studio Code</span></li>
+                            <li><span>MySQL</span></li>
+                            <li><span>Eclipse</span></li>
+                            <li><span>EditPlus</span></li>
+                        </ul>
                     </div>
-                    <div class="skill__guage">
-                        <div class="skill__value"></div>
-                    </div>
-                </div>
-                <div class="skill">
-                    <div class="skill__description">
-                        <span>JAVASCRIPT</span>
-                        <span>30%</span>
-                    </div>
-                    <div class="skill__guage">
-                        <div class="skill__value"></div>
-                    </div>
-                </div>
-                <div class="skill">
-                    <div class="skill__description">
-                        <span>REACT</span>
-                        <span>0%</span>
-                    </div>
-                    <div class="skill__guage">
-                        <div class="skill__value"></div>
-                    </div>
-                </div>
-                <div class="skill">
-                    <div class="skill__description">
-                        <span>NODEJS</span>
-                        <span>5%</span>
-                    </div>
-                    <div class="skill__guage">
-                        <div class="skill__value"></div>
-                    </div>
-                </div>
-            </div>
-            <div class="skillset__right">
-                <div class="tools">
-                    <h3 class="skillset__title">Tools</h3>
-                    <ul class="skill__description">
-                        <li><span>Visual Studio Code</span></li>
-                        <li><span>MySQL</span></li>
-                        <li><span>Eclipse</span></li>
-                        <li><span>EditPlus</span></li>
-                    </ul>
-                </div>
-                <div class="etc">
-                    <h3 class="skillset__title">Etc</div>
-                    <ul class="skill__description">
-                        <li><span>Git</span></li>
+                    <div class="etc">
+                        <h3 class="skillset__title">Etc</h3>
+                        <ul class="etc__list">
+                            <li><span>Git</span></li>
+                        </ul>
                     </div>
                 </div>
             </div>
@@ -153,72 +159,72 @@
     </section>
 
     <!-- My work -->
-    <section id="work">
-        <h1 class="title">My work</h1>
-        <h3 class="subtitle">Projects</h3>
-        <div class="work__categories">
-            <button class="category__btn">
-                All<span class="category__count">3</span></button>
-            <button class="category__btn">
-                Front-end<span class="category__count">2</span></button>
-            <button class="category__btn">
-                Back-end<span class="category__count">2</span></button>
-            <button class="category__btn">
-                Mobile<span class="category__count">1</span></button>
-        </div>
-        <div class="work__projects">
-            <a href="#" target="_blank" class="project">
-                <img src="imgs/projects/1.jpeg" alt="River Phoenix" class="project__img">
-                <div class="project__description">
-                    <h3>River Phoenix</h3>
-                    <span>American actor</span>
-                </div>
-            </a>
-            <a href="#" target="_blank" class="project">
-                <img src="imgs/projects/2.jpg" alt="Pete Burns" class="project__img">
-                <div class="project__description">
-                    <h3>Pete Burns</h3>
-                    <span>English musician</span>
-                </div>
-            </a>
-            <a href="#" target="_blank" class="project">
-                <img src="imgs/projects/3.jpeg" alt="River Phoenix" class="project__img">
-                <div class="project__description">
-                    <h3>River Phoenix</h3>
-                    <span>American actor</span>
-                </div>
-            </a>
+    <section id="work" class="section">
+        <div class="section__container">
+            <h1 class="title">My work</h1>
+            <h3 class="subtitle">Projects</h3>
+            <div class="work__categories">
+                <button class="category__btn active">
+                    All<span class="category__count">3</span></button>
+                <button class="category__btn">
+                    Front-end<span class="category__count">2</span></button>
+                <button class="category__btn">
+                    Back-end<span class="category__count">2</span></button>
+                <button class="category__btn">
+                    Mobile<span class="category__count">1</span></button>
+            </div>
+            <div class="work__projects">
+                <a href="#" target="_blank" class="project">
+                    <img src="imgs/projects/1.jpeg" alt="River Phoenix" class="project__img">
+                    <div class="project__description">
+                        <h3>River Phoenix</h3>
+                        <span>American actor</span>
+                    </div>
+                </a>
+                <a href="#" target="_blank" class="project">
+                    <img src="imgs/projects/2.jpg" alt="Pete Burns" class="project__img">
+                    <div class="project__description">
+                        <h3>Pete Burns</h3>
+                        <span>English musician</span>
+                    </div>
+                </a>
+                <a href="#" target="_blank" class="project">
+                    <img src="imgs/projects/3.jpeg" alt="River Phoenix" class="project__img">
+                    <div class="project__description">
+                        <h3>River Phoenix</h3>
+                        <span>American actor</span>
+                    </div>
+                </a>
+            </div>
         </div>
     </section>
 
     <!-- Testimonial -->
-    <section id="testimonials">
+    <section id="testimonials" class="section">
+        <div class="section__container">
         <h1 class="title">Testimonials</h1>
-        <h3 class="subtitle">See what they say about me</h3>
+        <h2 class="subtitle">See what they say about me</h2>
         <div class="testimonial__box">
             <div class="testimonial">
-                <div class="testimonial__avatar">
-                    <img src="imgs/tesimonial/people1-200515-154332.jpg" alt="People">
-                </div>
+                    <img src="imgs/tesimonial/people1-200515-154332.jpg" alt="People" class="testimonial__avatar">
                 <div class="testimonial__speechBubble">
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Recusandae velit mollitia deserunt, fugiat itaque a excepturi. Perspiciatis harum eum omnis quibusdam dolores assumenda repudiandae dolorum, eveniet quo velit, molestias ad.</p>
-                    <p class="name"><a href="#">Yoonji</a> / BallPython</p>
+                    <p class="name"><a href="https://github.com/sourmix" target="_blank">Yoonji</a> / BallPython</p>
                 </div>
             </div>
             <div class="testimonial">
-                <div class="testimonial__avatar">
-                    <img src="imgs/tesimonial/people1-200515-154332.jpg" alt="People">
-                </div>
                 <div class="testimonial__speechBubble">
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Recusandae velit mollitia deserunt, fugiat itaque a excepturi. Perspiciatis harum eum omnis quibusdam dolores assumenda repudiandae dolorum, eveniet quo velit, molestias ad.</p>
-                    <p class="name"><a href="#">Yoonji</a> / BallPython</p>
+                    <p class="name"><a href="https://github.com/sourmix" target="_blank">Yoonji</a> / BallPython</p>
                 </div>
+                <img src="imgs/tesimonial/people1-200515-154332.jpg" alt="People" class="testimonial__avatar">
             </div>
         </div>
+    </div>
     </section>
 
     <!-- Contact -->
-    <footer id="contact">
+    <footer id="contact" class="section">
         <h1 class="contact__title">Let's talk</h1>
         <a href="mailto:syju3367@gmail.com"><h2 class="contact__email">syju3367@gmail.com</h3></a>
         <div class="contact__links">
